generate/testdata/errors/UnknownScalar.go
package errors

const _ = `# @genqlient
	query UnknownScalar { f }
`
